--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,71 +1,73 @@
 name: Helm Publish
 on:
   push:
-    branches: [ 'master', 'main' ]
-  workflow_dispatch:
-
+    branches: [ 'main' ]
 jobs:
-  helm:
-    permissions:
-      contents: read
-      packages: write
+  setup:
+    name: Setup Helm
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Install Helm
         uses: azure/setup-helm@v3
         with:
-          version: v3.12.3 # Lock version for now, helm v3.13.0 contains bugs related to oci that will be fixed in v3.13.1. https://github.com/helm/helm/issues/12423
-          token: ${{ secrets.GITHUB_TOKEN }}
+          version: v3.16.0
 
-      - name: Build and Push the Helm Charts to GitHub Container Registry
-        uses: JimCronqvist/action-helm-chart-repo@master
+  package:
+    name: Package Helm Charts
+    runs-on: ubuntu-latest
+    needs: setup  # Waits for 'setup' job to complete
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Package Helm Charts
+        shell: bash
+        run: |
+          mkdir -p dist  # Ensure dist directory exists
+          find charts/ -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq | xargs --verbose -L 1 helm dep up
+          for subdir in charts/*/; do
+              echo "$subdir"
+              helm package "$subdir" -u -d dist
+          done
+
+      - name: Archive dist directory
+        uses: actions/upload-artifact@v3
         with:
-          chartsPath: "charts/"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          name: packaged-charts
+          path: dist
 
+  login:
+    name: Login to GitHub Container Registry
+    runs-on: ubuntu-latest
+    needs: package  # Waits for 'package' job to complete
+    steps:
+      - name: Login to GitHub Container Registry
+        shell: bash
+        run: echo "${GITHUB_TOKEN}" | helm registry login ${REGISTRY} --username "${GITHUB_ACTOR}" --password-stdin
+        env:
+          REGISTRY: "ghcr.io/${{ github.repository }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACTOR: ${{ github.actor }}
 
+  push:
+    name: Push Helm Charts to GHCR
+    runs-on: ubuntu-latest
+    needs: [package, login]  # Waits for both 'package' and 'login' jobs to complete
+    steps:
+      - name: Download packaged charts
+        uses: actions/download-artifact@v3
+        with:
+          name: packaged-charts
+          path: dist
 
-#name: Release
-#permissions:
-#  packages: write
-#  contents: read
-#on:
-#  push:
-#    branches: [ main ]
-#jobs:
-#  release:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Git Checkout
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#      - name: Configure Git
-#        run: |
-#          git config user.name "$GITHUB_ACTOR"
-#          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-#      - name: Helm Installation
-#        uses: azure/setup-helm@v1.1
-#        with:
-#          version: v3.16.0
-#      - name: Add helm repositories
-#        run: |
-#          for dir in $(ls -d charts/*/); do
-#            helm dependency list $dir 2> /dev/null | tail +2 | head -n -1 | awk '{ print "helm repo add " $1 " " $3 }' | while read cmd; do $cmd; done
-#          done
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v3
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#      - name: Run chart-releaser
-#        uses: helm/chart-releaser-action@v1.6.0
-#        with:
-#          pages_branch: gh-pages
-#        env:
-#          CR_SKIP_EXISTING: true
-#          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Push Helm Charts to GHCR
+        shell: bash
+        working-directory: dist
+        run: |
+          for f in *.tgz ; do
+              echo "$f"
+              helm push "$f" "oci://${REGISTRY}"
+          done
+        env:
+          REGISTRY: "ghcr.io/${{ github.repository }}"
