--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,7 +13,6 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: v3.16.0
-
   package:
     name: Package Helm Charts
     runs-on: ubuntu-latest
@@ -30,17 +29,15 @@ jobs:
               echo "$subdir"
               helm package "$subdir" -u -d dist
           done
-
       - name: Archive dist directory
         uses: actions/upload-artifact@v3
         with:
           name: packaged-charts
           path: dist
-
-  login:
-    name: Login to GitHub Container Registry
+  push:
+    name: Push Helm Charts to GHCR
     runs-on: ubuntu-latest
-    needs: package  # Waits for 'package' job to complete
+    needs: package  # Waits for both 'package' job to complete
     steps:
       - name: Login to GitHub Container Registry
         shell: bash
@@ -49,19 +46,12 @@ jobs:
           REGISTRY: "ghcr.io/${{ github.repository }}"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_ACTOR: ${{ github.actor }}
-
-  push:
-    name: Push Helm Charts to GHCR
-    runs-on: ubuntu-latest
-    needs: [package, login]  # Waits for both 'package' and 'login' jobs to complete
-    steps:
       - name: Download packaged charts
         uses: actions/download-artifact@v3
         with:
           name: packaged-charts
           path: dist
-
-      - name: Push Helm Charts to GHCR
+      - name: Push packages
         shell: bash
         working-directory: dist
         run: |
