--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -64,3 +64,22 @@ jobs:
           done
         env:
           REGISTRY: "ghcr.io/${{ github.repository }}"
+
+  release:
+    name: Release Helm Charts to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: package  # Waits for 'package' job to complete
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Download packaged charts
+        uses: actions/download-artifact@v4
+        with:
+          name: packaged-charts
+          path: dist
+      - name: Release Helm Charts
+        uses: helm/chart-releaser-action@v1.6.1
+        with:
+          chart-dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
