--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -82,4 +82,4 @@ jobs:
         with:
           charts_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
